transportation: update tram lines, add LEZ warning

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -33,13 +33,16 @@ sponsors_under_navigation: true
   GPS coordinates:
 </p>
 
-<dl class="dl-horizontal geo">
-  <dt>Latitude:</dt>
-  <dd class="latitude">N50.812375</dd>
-  <dt>Longitude:</dt>
-  <dd class="longitude">E4.380734</dd>
-</dl>
+<ul>
+  <li><strong>Latitude:</strong> N50.812375</li>
+  <li><strong>Longitude:</strong> E4.380734</li>
+</ul>
 
+<br />
+<br />
+<br />
+<br />
+<br />
 <hr/>
 
 <a name="bus"></a><h3>By bus and/or tram</h3>
@@ -47,7 +50,7 @@ sponsors_under_navigation: true
 <p>Metro/tram/bus lines provided by the public transport company, STIB/MIVB.</p>
 <dl>
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=25" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=25" 
      title="STIB/MIVB - Tram 25">Tram 25</a>
 </strong></dt>
 <dd><ul>
@@ -56,27 +59,28 @@ sponsors_under_navigation: true
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=71" 
      title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>De Brouck&egrave;re</strong> in central Brussels towards <strong>Delta</strong></li>
 <li><strong>Stop: </strong>ULB</li>
+<li><strong>Warning!</strong> Due to roadworks, some stops are not being served. More information can be found <a href="http://www.stib-mivb.be/article.html?l=en&_guid=804aa8e6-d3c3-3610-a4ad-bdea420bac39">here</a>.</li>
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=72" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=72" 
      title="STIB/MIVB - Bus 72">Bus 72</a></strong></dt>
 <dd><ul>
-<li><strong>Direction: </strong>From <strong>ADEPS</strong> towards <strong>Dev&egrave;ze-ULB</strong></li>
+<li><strong>Direction: </strong>From <strong>ADEPS</strong> towards <strong>ULB</strong></li>
 <li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94" 
-     title="STIB/MIVB - Tram 94">Tram 94</a>
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=8" 
+     title="STIB/MIVB - Tram 8">Tram 8</a>
 </strong></dt>
 <dd><ul>
-<li><strong>Direction: </strong>From <strong>Louise</strong> towards <strong>Mus&eacute;e du Tram</strong></li>
+<li><strong>Direction: </strong>From <strong>Louise</strong> towards <strong>Roodebeek</strong></li>
 <li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 
@@ -157,6 +161,12 @@ shows one of the signs that may be used to indicate this blue zone.
 These signs are placed on the zone edges, so not repeated on every
 street inside the zone. Other nearby streets are in paid parking zones:
 check where you park your car.
+</p>
+<p>
+As of 2018, the ULB campus Solbosch is within the Brussels Low Emissions
+Zone (LEZ). Drivers of cars registered abroad are required to register
+before entering the LEZ, or risk being fined. Registering is free of
+charge. More information can be found <a href="https://www.lez.brussels/en">here</a>.
 </p>
 
 
