--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -107,7 +107,7 @@ bars in the neighbourhood where you can pass the time!</p>
 <ul style="margin-top:0">
 <li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=M&linecode=2">Metro line 2</a></li>
 <li>Get off at station <u>Louise</u></li>
-<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, direction Mus&eacute;e du Tram</li>
+<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=8">Tram 8</a>, direction Roodebeek</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
 <br />
 <p>From <strong>Brussels Central</strong> ("<strong>Bruxelles Central</strong>", "<strong>Brussel Centraal</strong>" or "<strong>Gare Centrale</strong>") station (about <strong>20 minutes</strong>):
@@ -148,8 +148,8 @@ The parkings of the campus can be very busy since early morning
 during both days. An alternative is to leave your car in the
 <a href="http://www.interparking.be/find-parking/Sablon-Poelaert/n-Poelaert/">
 Parking Sablon-Poelaert</a>, from there to take the
-<a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=94">tram 94</a>, 
-direction Mus&eacute;e du Tram.
+<a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=8">Tram 8</a>,
+direction Roodebeek.
 Then follow the <a href="#bus">instructions above</a>.
 </p>
 <p>
