transportation: update all MIVB/STIB links
The URLs for timetables seem to have been changed.

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -105,19 +105,19 @@ bars in the neighbourhood where you can pass the time!</p>
 <a name="train"></a><h3>By train</h3>
 <p>From <strong>Brussels South</strong> (a.k.a. "<strong>Bruxelles Midi</strong>", "<strong>Brussel Zuid</strong>" or "<strong>Gare du Midi</strong>") Station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=M&linecode=2">Metro line 2</a></li>
+<li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=2">Metro line 2</a></li>
 <li>Get off at station <u>Louise</u></li>
 <li>Take the <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=8">Tram 8</a>, direction Roodebeek</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
 <br />
 <p>From <strong>Brussels Central</strong> ("<strong>Bruxelles Central</strong>", "<strong>Brussel Centraal</strong>" or "<strong>Gare Centrale</strong>") station (about <strong>20 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71">Bus 71</a>, direction Delta</li>
+<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=71">Bus 71</a>, direction Delta</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
 <br />
 <p>From <strong>Brussels North</strong> ("<strong>Bruxelles Nord</strong>" or "<strong>Gare du Nord</strong>") station (about <strong>30 minutes</strong>):
 <ul style="margin-top:0">
-<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=T&amp;linecode=25">Tram 25</a>, direction Boondael Gare</li>
+<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=25">Tram 25</a>, direction Boondael Gare</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
 <p>From <strong>Etterbeek</strong> station (about <strong>20 minutes</strong> walking):
 <ul style="margin-top:0">
@@ -176,7 +176,7 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 <ul style="margin-top:0">
 <li>Take the <u>train</u> to Brussels</li>
 <li>Get off at <u>Brussels Central</u> station</li>
-<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;moduscode=B&amp;linecode=71">Bus 71</a>, direction Delta</li>
+<li>Take <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=71">Bus 71</a>, direction Delta</li>
 <li>Follow the <a href="#bus">instructions above</a>.</li>
 </ul>
 </p>
