--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -121,8 +121,8 @@ bars in the neighbourhood where you can pass the time!</p>
 <li>Follow the <a href="#bus">instructions above</a>.</li></ul></p>
 <p>From <strong>Etterbeek</strong> station (about <strong>20 minutes</strong> walking):
 <ul style="margin-top:0">
-<li><a href="http://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=Paul+H%C3%A9gerlaan&amp;daddr=50.817107,4.392364+to:Etterbeek+station&amp;geocode=Fb9WBwMdntZCAA%3B%3B&amp;hl=en&amp;mra=dme&amp;mrcr=0&amp;mrsp=1&amp;sz=16&amp;via=1&amp;dirflg=w&amp;sll=50.816104,4.387987&amp;sspn=0.010087,0.01442&amp;ie=UTF8&amp;t=h&amp;z=16">directions from ULB/FOSDEM to the Etterbeek train station</a></li>
-<li><a href="http://www.belgianrail.be/jp/sncb-nmbs-routeplanner/query.exe/en?S=Etterbeek+%5bB%5d&Z=Brussel-Zuid&date=03/02/2013&time=18:30&start=1&timesel=depart">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
+<li><a href="https://www.google.com/maps/dir/?api=1&origin=50.822252,4.389511&destination=50.813771,4.384219&travelmode=walking">directions from ULB/FOSDEM to the Etterbeek train station</a></li>
+<li><a href="http://www.belgianrail.be/jp/nmbs-realtime/stboard.exe/en?input=8811411&boardType=dep&time=18:30-60&date=<%= days.last[:conference_day].strftime('%d/%m/%Y') %>&start=yes">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
 </p>
 
 <a name="parking"></a><h3>By car: parking</h3>
