--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -50,7 +50,7 @@ sponsors_under_navigation: true
 <p>Metro/tram/bus lines provided by the public transport company, STIB/MIVB.</p>
 <dl>
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=25" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=25"
      title="STIB/MIVB - Tram 25">Tram 25</a>
 </strong></dt>
 <dd><ul>
@@ -59,7 +59,7 @@ sponsors_under_navigation: true
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=71" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=71"
      title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>De Brouck&egrave;re</strong> in central Brussels towards <strong>Delta</strong></li>
@@ -68,7 +68,7 @@ sponsors_under_navigation: true
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=72" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=72"
      title="STIB/MIVB - Bus 72">Bus 72</a></strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>ADEPS</strong> towards <strong>ULB</strong></li>
@@ -76,7 +76,7 @@ sponsors_under_navigation: true
 </ul></dd>
 
 <dt><strong>
-  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=8" 
+  <a href="http://www.stib.be/horaires-dienstregeling2.html?l=en&amp;_line=8"
      title="STIB/MIVB - Tram 8">Tram 8</a>
 </strong></dt>
 <dd><ul>
@@ -188,8 +188,7 @@ If you need a taxi, we suggest calling Taxi Verts on
 <br/> &nbsp; ULB Campus Solbosch
 <br/> &nbsp; 50, Av. Franklin D. Roosevelt
 <br/> &nbsp; 1050 Bruxelles
-<br/>The location where taxis expect to pick you up is marked
-on the map.
+<br/>The location where taxis expect to pick you up is marked on the map.
 </p>
 
 <hr />
