add info about wheelchair parking spaces

--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -29,6 +29,8 @@ speaker are available in the following rooms:</p>
 
 <h3>Wheelchair and limited mobility needs</h3>
 
+<p>There is a limited number of <a href="https://www.ulb.ac.be/mobilite/stationnement-PMR.html#solbosch">reserved car park places</a> available.</p>
+
 <p><a href="https://nav.fosdem.org">Nav.fosdem.org</a> is our on campus route planner. It has an option for avoiding stairs. All routes calculated this way should be wheelchair and limited mobility accessible. Rooms with no limited mobility access are:</p>
 
 <ul>
