about: update staff list for 2019

--- a/content/about.html
+++ b/content/about.html
@@ -102,8 +102,8 @@ navtitle: About
     <a name="team"></a><h2>The team</h2>
     <small>in alphabetical order</small>
     <ul>
-      <li>Nevelina Aleksandrova</li>
       <li>Niels Ballis</li>
+      <li>Linda Calders</li>
       <li>Gerry Demaret</li>
       <li>Pieter De Praetere</li>
       <li>Michael De Swert</li>
@@ -116,10 +116,9 @@ navtitle: About
       <li>Vasil Kolev</li>
       <li>Daniele Lacamera</li>
       <li>Koert Loret</li>
-      <li>Maria Markova</li>
       <li>Jan-Frederik Martens</li>
       <li>Marthe Parada Delgado</li>
-      <li>Juan Rial</li>
+      <li>Thomas Perale</li>
       <li>Stella Rouzi</li>
       <li>Sebastian Schauenburg</li>
       <li>Jonas Scheers</li>
@@ -127,9 +126,9 @@ navtitle: About
       <li>Wouter Simons</li>
       <li>Ieva Supjeva</li>
       <li>Emanuil Tolev</li>
+      <li>Johan Van de Wauw</li>
       <li>Mark Van den Borre</li>
       <li>Wouter Verhelst</li>
-      <li>Bart Weijs</li>
       <li>The many volunteers who help out during the weekend</li>
       <li>...</li>
     </ul>
