stands: publish list of accepted stands

--- a/content/stands.html
+++ b/content/stands.html
@@ -4,13 +4,78 @@
 # Use the format:   - Stand name (#tables): URL
 title: Stands
 stands:
-# All [in random order] (61):
-  AW (8):
-  H (8):
-  K [level 1, group A] (11):
-  K [level 1, group B] (8):
-  K [level 1, group C] (9):
-  K [level 2] (19):
+  All [alphabetically] (65):
+   - 0 A.D.
+   - App Inventor
+   - Bareos
+   - Bazel
+   - CentOS
+   - Ceph, Gluster
+   - coreboot, flashrom, LinuxBoot
+   - DashboardHub
+   - Debian
+   - Eclipse Foundation
+   - Emitter
+   - Espruino, MicroPython
+   - Fedora Project
+   - FOSSASIA
+   - FSF + FSFE
+   - FreeBSD Project
+   - Gentoo
+   - GitLab
+   - GNOME
+   - Godot Engine
+   - Google Summer of Code
+   - Grafana
+   - GRUB Project
+   - Haiku
+   - Ham Radio
+   - illumos
+   - IsardVDI
+   - JavaScript
+   - KDE
+   - Kopano
+   - LFS
+   - LibreOffice
+   - Linaro
+   - Linux Professional Institute (LPI)
+   - Matrix.org
+   - Mender.io
+   - Mozilla
+   - MySQL
+   - Nextcloud
+   - Open Source Design
+   - Open Source Initiative
+   - Open Source Test Case Management
+   - OpenEmbedded
+   - openHAB
+   - OpenLDAP
+   - OpenStack, RDO Community
+   - openSUSE Project
+   - oVirt, Foreman
+   - ownCloud
+   - Percona
+   - Perl Programming Languages
+   - PINE64 Community
+   - PostGraphile
+   - PostgreSQL
+   - Project ACRN
+   - Python
+   - Schul-Frei and Teckids e.V.
+   - SOFA Open Source Physics Engine
+   - Software Freedom Conservancy
+   - The Apache Software Foundation
+   - The Realtime Lounge
+   - Turris
+   - VideoLAN
+   - wolfSSL
+   - XWiki, CryptPad
+# AW (8):
+# H (8):
+# K [level 1, group A] (11):
+# K [level 1, group B] (8):
+# K [level 1, group C] (9):
+# K [level 2] (19):
 ---
 <%
   # parse stands meta
