--- a/content/schedule.html
+++ b/content/schedule.html
@@ -75,11 +75,12 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </p>
 
 <p>
-  There are essentially five different categories of sessions and activities:
+  There are essentially six different categories of sessions and activities:
   <a href="#keynotes">keynotes</a>,
   <a href="#maintracks">main tracks</a>,
   <a href="#devrooms">developer rooms</a>,
-  <a href="#lightningtalks">lightning talks</a> and
+  <a href="#lightningtalks">lightning talks</a>,
+  <a href="#stands">stands</a> and
   <a href="#certification">certification exams</a>.
 </p>
 
@@ -262,6 +263,20 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   yet.</span>
 </p>
 <% end %>
+
+<a name="stands"></a>
+<h3>Stands<h3>
+<p>
+  In the hallways of the different buildings, FOSDEM visitors will find
+  the many stands set up by individual projects. These offer a unique
+  chance to get in touch with developers or project members, and discover
+  at a glance what they do.
+</p>
+
+<p>
+  A list of projects that will be present with a stand can be found on the
+  <a href="page:/stands/">FOSDEM stands page</a>.
+</p>
 
 <a name="certification"></a>
 <h3> Certification Exams</h3>
