accessibility: minor cleanup

--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -6,45 +6,66 @@ title: Accessibility
 %>
 
 <p>
-  FOSDEM welcomes all free software and open source developers!  While we don't own the university
-  campus and have little control over its accessibility, we have tried to find
-  ways for developers with physical limitations to make the most of the event.
+  FOSDEM welcomes all free software and open source developers!  While
+  we don't own the university campus and have little control over its
+  accessibility, we have tried to find ways for developers with
+  physical limitations to make the most of the event.
 </p>
+
 <h3>Visual or auditory needs</h3>
 
-<p>For people with visual or auditory needs, marked places near the
-speaker are available in the following rooms:</p>
+<p>
+  For people with visual or auditory needs, marked places near the
+  speaker are available in the following rooms:
+</p>
 
 <ul>
- <li>H.2215 (Ferrer)</li>
- <li>UA2.220 (Guilissen)</li>
- <li>UB2.252A (Lameere)</li>
- <li>UD2.120 (Chavanne)</li>
- <li>UD2.218A</li<
- <li>Janson</li>
- <li>K.1.105 (La Fontaine)</li>
+  <li>H.2215 (Ferrer)</li>
+  <li>Janson</li>
+  <li>K.1.105 (La Fontaine)</li>
+  <li>UA2.220 (Guilissen)</li>
+  <li>UB2.252A (Lameere)</li>
+  <li>UD2.120 (Chavanne)</li>
+  <li>UD2.218A</li<
 </ul>
-
-<p>People with auditory needs might want to know that for FOSDEM 2018, we are also running an experiment with closed captioning of a limited subset of video recordings. These captioned videos will be made available in the weeks after the event.</p>
 
 <h3>Wheelchair and limited mobility needs</h3>
 
-<p>There is a limited number of <a href="https://www.ulb.ac.be/mobilite/stationnement-PMR.html#solbosch">reserved car park places</a> available.</p>
+<p>
+  There is a limited number of
+  <a href="https://www.ulb.ac.be/mobilite/stationnement-PMR.html#solbosch">reserved car park spaces</a>
+  available.
+</p>
 
-<p><a href="https://nav.fosdem.org">Nav.fosdem.org</a> is our on campus route planner. It has an option for avoiding stairs. All routes calculated this way should be wheelchair and limited mobility accessible. Rooms with no limited mobility access are:</p>
+<p>
+  At <a href="https://nav.fosdem.org">nav.fosdem.org</a>, you will
+  find our on-campus route planner. It has an option for avoiding
+  stairs. All routes calculated with this option set should be
+  wheelchair and limited mobility accessible.
+</p>
+
+<p>
+  Unfortunately, some rooms are only accessible by using stairs:
+</p>
 
 <ul>
- <li>AW1121</li>
- <li>AW1125</li>
- <li>UA2.220 Guillissen</li>
- <li>UA2.118 Henriot</li>
- <li>UA2.114 Baudoux</li>
+  <li>AW1.121</li>
+  <li>AW1.125</li>
+  <li>UA2.114 Baudoux</li>
+  <li>UA2.118 Henriot</li>
+  <li>UA2.220 Guillissen</li>
 </ul>
 
 <h3>Accessibility contact</h3>
+
 <p>
-All staff and volunteers should be able to help you find accessible routes around the campus.
+  All FOSDEM staff members (yellow shirts) and volunteers (orange
+  shirts) should be able to help you find accessible routes around the
+  campus.
 </p>
 
 <h3>Suggestions welcome</h3>
-<p>We welcome your ideas for improving accessibility at FOSDEM. Please email them to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.</p>
+<p>
+  We welcome your ideas for improving accessibility at FOSDEM. Please
+  email them to <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+</p>
