accessibility: link to ULB's info

--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -51,10 +51,15 @@ title: Accessibility
 <ul>
   <li>AW1.121</li>
   <li>AW1.125</li>
-  <li>UA2.114 Baudoux</li>
-  <li>UA2.118 Henriot</li>
-  <li>UA2.220 Guillissen</li>
+  <li>UA2.114 (Baudoux)</li>
+  <li>UA2.118 (Henriot)</li>
+  <li>UA2.220 (Guillissen)</li>
 </ul>
+
+<p>
+  If you understand French, the <a href="https://www.ulb.ac.be/mobilite/PMR-acces.html">ULB's website</a>
+  may be a useful source of additional information.
+<P>
 
 <h3>Accessibility contact</h3>
 
