update to OSD devroom description
adding discourse link and https.

--- a/content/schedule/devrooms/open_source_design.html
+++ b/content/schedule/devrooms/open_source_design.html
@@ -7,6 +7,5 @@ experience, human-computer interaction, accessibility, information
 architecture, content strategy, service design, design research and
 &lt;add your favourite buzzword here&gt;. We hope to see you there.
 
-[Join the OpenSourceDesign community!](http://opensourcedesign.net)
-  
+[Join the OpenSourceDesign community!](https://opensourcedesign.net) and [take part in the discussions](https://http://discourse.opensourcedesign.net/).
 </p>
