--- a/content/schedule/devrooms/distributions.html
+++ b/content/schedule/devrooms/distributions.html
@@ -1,6 +1,6 @@
 <p>
-As more and more workloads are being considered for containerization
-in the future and are finally landing in virtualized environments today,
+As more and more workloads are being considered for containerization in
+the future and are finally landing in virtualized environments today,
 distributions remain a critical success factor and are more important
 than ever. Containers, like virtual machines, are not magical and
 rely on piles of software being assembled in a way that is repeatable,
@@ -13,12 +13,4 @@ collection. Additionally, distributions do very important work in ensuring
 that various versions of upstream software work well together and can
 co-exist. Distributions are also, often responsible, for "de-vendoring"
 upstream software so that security fixes can be applied more quickly.
-
-For this year's distributions devroom, we want to focus on the ways that
-distribution technologies can be leveraged to allow for easier
-creation of a multi-verse of artifacts from single source trees. We also
-want to continue to highlight the huge efforts being made in shared
-environments around Build/Test/Release cycles. Hot topics related to
-the delivery problem as it impacts updates in terms of both size and
-rollback/reliability are expected to be featured.
 </p>
