--- a/content/schedule/devrooms/collaborative_information_and_content_management_applications.html
+++ b/content/schedule/devrooms/collaborative_information_and_content_management_applications.html
@@ -8,5 +8,5 @@ different contexts.
 
 <p>
 Talks in this devroom aim to present multiple use cases and
-possibilities that provide the knowledge management softwares of today.
+possibilities that provide the knowledge management software of today.
 </p>
