[misc] Fix typo in the Collab devroom description

--- a/content/schedule/devrooms/collaborative_information_and_content_management_applications.html
+++ b/content/schedule/devrooms/collaborative_information_and_content_management_applications.html
@@ -1,5 +1,5 @@
 <p>
-Wether it is in your company, in a non for profit organization or
+Whether it is in your company, in a non for profit organization or
 simply within a project team, knowledge management is always key for
 developing the team success. This devroom aims to address this problem
 by showing you how Open Source solution can help you in those
