Rewrite the description for the collab devroom

--- a/content/schedule/devrooms/collaborative_information_and_content_management_applications.html
+++ b/content/schedule/devrooms/collaborative_information_and_content_management_applications.html
@@ -1,12 +1,13 @@
 <p>
-Whether it is in your company, in a non for profit organization or
+Whether it is in your company, in a non-for-profit organization or
 simply within a project team, knowledge management is always key for
-developing the team success. This devroom aims to address this problem
-by showing you how Open Source solution can help you in those
+developing team success. This devroom aims to address this aspect
+by showing you how Open Source solutions can help you in those
 different contexts.
 </p>
 
 <p>
 Talks in this devroom aim to present multiple use cases and
-possibilities that provide the knowledge management softwares of today.
+possibilities provided by knowledge management software of today.
 </p>
+
