conduct: sync with printed version

--- a/content/practical/conduct.html
+++ b/content/practical/conduct.html
@@ -7,18 +7,18 @@ title: Code of Conduct
 
 <p>
   In order to keep FOSDEM a fun, interesting and positive experience for
-  everybody, we expect participants to follow the guidelines below.
+  everybody, we expect participants to follow our guidelines:
 </p>
 
 <p>
   FOSDEM aims to be a free, open and cooperative event. This means we
   expect collaboration from all the FOSDEM participants, and for
   everybody to behave respectfully towards all others, including those
-  that are different or think differently from yourself.
+  that are different or think differently from themselves.
 </p>
 
 <p>
-  Please be helpful, considerate, friendly and respectful towards all
+  Please be helpful, considerate, friendly, and respectful towards all
   other participants and respect the environment. We don't condone
   harassment or offensive behaviour at our conference. We consider it
   against our values as human beings. We're voicing our strong,
@@ -30,11 +30,11 @@ title: Code of Conduct
   the conference organisers and the ULB. We expect all participants to
   follow this Code of Conduct during the conference and related events.
   This includes conference-related social events at off-site locations,
-  and in related online communities and social media. Participants asked
-  to stop any unacceptable behaviour are expected to comply immediately.
-  Conference participants violating this Code of Conduct may be expelled
-  from the conference and/or banned from formal participation in future
-  events.
+  and in related online communities and on social media. Participants
+  asked to stop a particular behaviour by staff are expected to comply
+  immediately. Conference participants violating this Code of Conduct
+  may be expelled from the conference and/or banned from formal
+  participation in future events.
 </p>
 
 <p>
