update spouses tour for 2019

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -9,7 +9,7 @@ aliases: /sightseeing
 </div>
 
 <p>
-  Starting in 2009, FOSDEM has hired professional guides each year to offer free
+  FOSDEM hires professional guides each year to offer free
   guided tours of Brussels to the spouses/partners of FOSDEM visitors.
   If your partner would like to accompany you to Brussels but is not interested
   in the FOSDEM conference, this will make their stay worthwhile.
@@ -23,45 +23,35 @@ aliases: /sightseeing
 </p>
   
 <p>
-  The meeting point is next to the infodesk in front of the H building, and the tours end here as well.
-  For both tours, Saturday and Sunday you have to register in front providing phonenumber and e-mail.
-  Send an e-mail to tour@fosdem.org providing name, e-mail and phonenumber and await a confirmation.
+  The meeting point is in the hallway of the UD building, and the tours end here as well.
+  For both tours, Saturday and Sunday, you have to register in front providing phone number and e-mail.
+  Send an e-mail to tour@fosdem.org providing name, e-mail and phone number and await a confirmation.
   We need this information for emergencies and won't use it or store it for any other purpose.
   It will be deleted after FOSDEM ends.
 </p>
 
 <p> 
-  Come to H-Building ON TIME. If you are to late we sadly can't wait for you!
-  We gather in front of H-building next to the infodesk from 13:30 for both tours.
-  We leave no later then 13:45 to the Busstop which will take you all to the city centre. (Carréfour de l'Europe)
+  Come to the meeting point ON TIME. If you are to late we sadly can't wait for you!
+  We go to the city centre by public transport kindly offered by FOSDEM.
 </p>
 
 <P>
-  From there the tourguide (Saturday: Adeline / Sunday: Adrian) will take you on a discovery tour through Brussels.
+  From there the tour guide will take you on a discovery tour through Brussels.
 </p>
 
 <p>
   <b>The Saturday tour</b> will be the popular tour of the beautifull city centre of Brussels.
-  The guide will show you the main sights of Brussels. By foot, we will introduce you to the most important monuments 
-  and we will give you a great overview of the city in just 3 hours, including: 
+  The guide will show you the main sights of Brussels. By foot, we will show you some of the city in just two hours. Potential places to see include: 
   • Grand Place • Town Hall • Maison du Roi • Comic art scene • The Stock Exchange • Galeries Saint Hubert 
   • Manneken Pis • The Monnaie Opera • St Nicolas’ Church • River Senne • The Royal Square 
   • Mont des Arts The tour usually ends close to the Cathedral.
-  After which we will walk back to the Busstop (Carréfour de l'Europe) where we'll travel back to the ULB.
-  We expect to arrive back at ULB around 18:10
+  At 16:00, we go to Cinematek, the cinema museum, for a silent movie with live piano accompaniment. Afterwards, we will take public transport back to the ULB.
+  We expect to arrive back at ULB around 18:00.
 </p>
 
 <p>
-  <b>The Sunday tour</b> starts at the same time as Saturday and will end at 17:00 after which we will travel back to the ULB.
-  Here we will arrive approximately around 17:40.
-  This is called the alternative tour which means we will show you Brussels from another side. 
-  Brussels Alternative tour means discovering a part of the City where Art represents the people and locals battle against gentrification. 
-  This 2,5 hour tour includes: 
-  • Gentrification and the Moralles area • The LGBT District • Locals’ artistic remembrance of terror attacks 
-  • Street art and Murals • The famous comic book route  Europe’s second largest pedestrian zone 
-  • Belgiums `NO’ Cannabis policy and the reality • Riots and EU Demonstrations 
-  After which we will walk back to the Busstop (Carréfour de l'Europe) where we'll travel back to the ULB.
-  We expect to arrive back at ULB around 17:40.
+<b>The Sunday tour</b> starts at 12:30. We'll discover some of the monuments in the city center, have a short coffee break, and go underground visiting the archaelogical site of the historical <a href="https://coudenberg.brussels">Coudenberg palace</a>.
+  We expect to be back at ULB at 16:30 approximately.
 <div class="container-fluid">
 <div class="row-fluid">
 <div class="span6">
