update 2019 spouse tour

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -40,7 +40,7 @@ aliases: /sightseeing
 </p>
 
 <p>
-  <b>The Saturday tour</b> will be the popular tour of the beautifull city centre of Brussels.
+  <b>The Saturday tour</b> starts at 12:45. This will be the popular tour of the beautifull city centre of Brussels.
   The guide will show you the main sights of Brussels. By foot, we will show you some of the city in just two hours. Potential places to see include: 
   • Grand Place • Town Hall • Maison du Roi • Comic art scene • The Stock Exchange • Galeries Saint Hubert 
   • Manneken Pis • The Monnaie Opera • St Nicolas’ Church • River Senne • The Royal Square 
@@ -68,15 +68,15 @@ aliases: /sightseeing
   <tbody>
     <tr>
       <th>Saturday</th>
-      <td>Outside Infodesk H building</td>
-      <td>13:30</td>
-      <td>18:10</td>
+      <td>Ground floor corridor inside <a href="https://nav.fosdem.org/d/c:0:347.7:214.89/@0,346.04,215.75,4.95">UD building</a></td>
+      <td>12:45</td>
+      <td>18:00</td>
     </tr>
     <tr>
       <th>Sunday</th>
-      <td>Outside Infodesk H building</td>
-      <td>13:30</td>
-      <td>17:40</td>
+      <td>Ground floor corridor inside <a href="https://nav.fosdem.org/d/c:0:347.7:214.89/@0,346.04,215.75,4.95">UD building</a></td>
+      <td>12:15</td>
+      <td>16:30</td>
     </tr>
   </tbody>
 </table>
