transportation: update number of buses

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -91,7 +91,7 @@ sponsors_under_navigation: true
 the conference venue to <strong>Brussels South (Midi)</strong> railway
 station which has a regular service to many popular destinations within
 Belgium and to surrounding countries.</p>
-<p>Three buses will provide the service between <strong>15:30</strong>
+<p>Five buses will provide the service between <strong>15:30</strong>
 and <strong>19:30</strong>. The journey takes approximately 20 minutes.
 The departure location will be confirmed nearer the event.</p>
 <p>Between 15:30 and 17:15, a bus is scheduled to depart every 15
