updated beer page

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -49,11 +49,10 @@ opportunity to taste some of the finest
 <h2>Security measures / access control</h2>
 <p>
   We have reserved the ground floor of the bar (<em>Delirium Caf&eacute;</em>)
-  and the first floor (<em>Hoppy Loft</em>) as a private party for FOSDEM, 
-  and this between 18h00 and 1h00. You are welcome to join before 18h00, as 
-  well as stay after 1h00.  FOSDEM volunteers will help us keep this area
-  FOSDEM-only. If you meet a volunteer or a guard at the entrance to the bar or at
-  the entrace to the alley, make it clear to him or her that you are there for the
+  as a private party for FOSDEM, and this between 18h00 and 1h00. You are welcome to
+  join before 18h00, as well as stay after 1h00.  FOSDEM volunteers will help us keep 
+  this area FOSDEM-only. If you meet a volunteer or a guard at the entrance to the bar or
+  at the entrace to the alley, make it clear to him or her that you are there for the
   FOSDEM party. Wearing appropriately geeky attire tends to do the trick, as does 
   mentioning the name FOSDEM and answering some tricky questions to prove you've
   been initiated into geekdom.
@@ -68,8 +67,10 @@ opportunity to taste some of the finest
   For the sake of simplicity, <em>soda</em> (cola, lemonade, water, etc) is beer
   too&mdash;at least as far as tokens are concerned.
   Tokens may be bought individually or in bigger quantities, but FOSDEM staff 
-  prefers to deal with bigger quantities and paper money rather than metal money.
-  It’s lighter, easier to sort and recycles perfectly.
+  prefers to deal with bigger quantities and paper money rather than metal money. 
+  It’s lighter, easier to sort and recycles perfectly. No electronic payments
+  are supported, please ensure you have cash money (in euros) if you plan to
+  quench that thirst!
   Tokens will be sold as of 18h00 (at the same time when our reserved space becomes
   exclusive for FOSDEM visitors).
   FOSDEM tokens are also accepted at the <em>Floris Bar</em>&mdash;consisting or
@@ -83,6 +84,29 @@ opportunity to taste some of the finest
   as well as a bunch of people in flashy yellow and orange t-shirts).
   In exchange for money, you will receive “beer tokens”.
 </p>
+
+<h2>Beers</h2>
+<p>
+  For this edition, these beers have been selected and await your judgement:
+</p>
+<ul>
+ <li>Floris Cactus (Fruit Beer, 4.2%)</li>
+ <li>Campus (Lager, 5%)</li>
+ <li>Floris White (White Beer, 5%)</li>
+ <li>Oud Beersel Lambic (Lambic/Sour, 5.7%)</li>
+ <li>Precieux IPA Jack (India Pale Ale, 5.9%)</li>
+ <li>Brugse Zot Blonde (Blonde Ale, 6%)</li>
+ <li>Waterloo Recolte (White Beer, 6%)</li>
+ <li>Averbode (Abbey Beer, Blonde Ale, 7.5%)</li>
+ <li>Barbar (Honey Ale, 8%)</li>
+ <li>Chimay Triple (Abbey Beer, 8%)</li>
+ <li>Delirium Red (Cherry Beer, 8%)</li>
+ <li>Delirium Tremens (Ale, 8.5%)</li>
+ <li>Delirium Nocturnum (Dark Ale, 8.5%)</li>
+ <li>Guillotine (Belgian Ale, 8.5%)</li>
+ <li>Bersalis Triple (Abbey Triple, 9%)</li>
+ <li>Straffe Hendrik IV Ale (Quadrupel Ale, 11%)</li>
+</ul>
 
 <h2>Quality of Service</h2>
 <p>
@@ -128,7 +152,8 @@ opportunity to taste some of the finest
   Unlike some other beers, Belgian beer is not just coloured water.
   Some beers contain significant quantities of alcohol and <em>will</em> give
   you a pounding hangover (as a side note, consuming lots of (pure) water helps
-  preventing that).
+  preventing that, and Club Mate can get you back into shape the next day,
+  the bar at FOSDEM has this nectar available on Saturday and Sunday).
   FOSDEM staff is not responsible for any hallucinations you may experience as a
   result of this event. <code>:-)</code>
 </p>
