updated beer page, v2

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -32,9 +32,27 @@ opportunity to taste some of the finest
 </p>
 
 <p>
-  For efficiency reasons, the available beers are limited.
+  For efficiency reasons, the available beers are limited. For this edition, these beers have been selected and await your judgement:
 </p>
 <p>
+<ul>
+ <li>Floris Cactus (Fruit Beer, 4.2%)</li>
+ <li>Campus (Lager, 5%)</li>
+ <li>Floris White (White Beer, 5%)</li>
+ <li>Oud Beersel Lambic (Lambic/Sour, 5.7%)</li>
+ <li>Precieux IPA Jack (India Pale Ale, 5.9%)</li>
+ <li>Brugse Zot Blonde (Blonde Ale, 6%)</li>
+ <li>Waterloo Recolte (White Beer, 6%)</li>
+ <li>Averbode (Abbey Beer, Blonde Ale, 7.5%)</li>
+ <li>Barbar (Honey Ale, 8%)</li>
+ <li>Chimay Triple (Abbey Beer, 8%)</li>
+ <li>Delirium Red (Cherry Beer, 8%)</li>
+ <li>Delirium Tremens (Ale, 8.5%)</li>
+ <li>Delirium Nocturnum (Dark Ale, 8.5%)</li>
+ <li>Guillotine (Belgian Ale, 8.5%)</li>
+ <li>Bersalis Triple (Abbey Triple, 9%)</li>
+ <li>Straffe Hendrik IV Ale (Quadrupel Ale, 11%)</li>
+</ul>
 </p>
 
 <h2>Virtual Beer Distribution Algorithm v3.3 (stable)</h2>
@@ -84,29 +102,6 @@ opportunity to taste some of the finest
   as well as a bunch of people in flashy yellow and orange t-shirts).
   In exchange for money, you will receive “beer tokens”.
 </p>
-
-<h2>Beers</h2>
-<p>
-  For this edition, these beers have been selected and await your judgement:
-</p>
-<ul>
- <li>Floris Cactus (Fruit Beer, 4.2%)</li>
- <li>Campus (Lager, 5%)</li>
- <li>Floris White (White Beer, 5%)</li>
- <li>Oud Beersel Lambic (Lambic/Sour, 5.7%)</li>
- <li>Precieux IPA Jack (India Pale Ale, 5.9%)</li>
- <li>Brugse Zot Blonde (Blonde Ale, 6%)</li>
- <li>Waterloo Recolte (White Beer, 6%)</li>
- <li>Averbode (Abbey Beer, Blonde Ale, 7.5%)</li>
- <li>Barbar (Honey Ale, 8%)</li>
- <li>Chimay Triple (Abbey Beer, 8%)</li>
- <li>Delirium Red (Cherry Beer, 8%)</li>
- <li>Delirium Tremens (Ale, 8.5%)</li>
- <li>Delirium Nocturnum (Dark Ale, 8.5%)</li>
- <li>Guillotine (Belgian Ale, 8.5%)</li>
- <li>Bersalis Triple (Abbey Triple, 9%)</li>
- <li>Straffe Hendrik IV Ale (Quadrupel Ale, 11%)</li>
-</ul>
 
 <h2>Quality of Service</h2>
 <p>
