added hoppy loft

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -91,7 +91,8 @@ opportunity to taste some of the finest
   quench that thirst!
   Tokens will be sold as of 18h00 (at the same time when our reserved space becomes
   exclusive for FOSDEM visitors).
-  FOSDEM tokens are also accepted at the <em>Floris Bar</em>&mdash;consisting or
+  FOSDEM tokens are also accepted at the <em>Hoppy Loft</em> (first floor), 
+  the <em>Floris Bar</em>&mdash;consisting of
   the <em>Tequileria</em>, the <em>Garden</em> and the <em>Monasterium</em>&mdash;
   (across the alley from the <em>Delirium Caf&eacute;</em>)
   as well as at the bar in the basement (<em>Taphouse</em>).
