layout changes, so the beer list doesn't start next to the beer image

--- a/content/beerevent.html
+++ b/content/beerevent.html
@@ -19,6 +19,8 @@ opportunity to taste some of the finest
   </span>
   from 16h00 onwards, but feel free to join the party at any time of the
   evening.
+</p>
+<p>
   We will be there until the bar closes (well after midnight).
 </p>
 
@@ -32,7 +34,9 @@ opportunity to taste some of the finest
 </p>
 
 <p>
-  For efficiency reasons, the available beers are limited. For this edition, these beers have been selected and await your judgement:
+  For efficiency reasons, the available beers are limited.
+</p>
+<p>For this edition, these beers have been selected and await your judgement:
 </p>
 <p>
 <ul>
