added Mastodon to the social page

--- a/content/social.html
+++ b/content/social.html
@@ -9,4 +9,5 @@ navtitle: Social media
   <li><a href="https://twitter.com/fosdem">Twitter</a></li>
   <li><a href="https://facebook.com/fosdem">Facebook</a></li>
   <li><a href="https://www.instagram.com/fosdem/">Instagram</a></li>
+  <li><a href="https://fosstodon.org/@fosdem">Mastodon</a></li>
 </ul>
