transportation: show bus departure location

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -93,7 +93,8 @@ station which has a regular service to many popular destinations within
 Belgium and to surrounding countries.</p>
 <p>Five buses will provide the service between <strong>15:30</strong>
 and <strong>19:30</strong>. The journey takes approximately 20 minutes.
-The departure location will be confirmed nearer the event.</p>
+The <a href="https://nav.fosdem.org/l/c:0:331.17:16.68/@0,332.08,81.15,0.14">departure location</a> is on the main road below the campus in front of
+the AW building.</p>
 <p>Between 15:30 and 17:15, a bus is scheduled to depart every 15
 minutes. Based on previous experience, we expect the buses to be
 busiest from 17:30 on. We will abandon our fixed schedule then with
